# lyre

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  model_registry.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  cli-reference.md  concepts.md  configuration.md  getting-started.md  writing-personas.md
docs/design/: AGENT_CONTRACT.md  AGENT_RUNTIME.md  AGENT_THREADS.md  BUILTIN_SKILLS.md  CAPABILITY_DISCOVERY.md  DASHBOARD.md  DEEP_REVIEW_2026-06.md  FAILURE_ROBUSTNESS.md  FOUNDATION.md  H3_DISPATCH_DEPTH_CAP.md  LONG_RUNNING_ROBUSTNESS.md  LONG_RUNNING_ROBUSTNESS_2.md  LONG_RUNNING_ROBUSTNESS_3.md  MEMORY_ORGANIZATION.md  (+9 more)
migrations/: 0001_initial.sql  0002_blobs.sql  0002_broadcast.sql  0003_agents.sql  0003_outbox_channel_publish.sql  0004_outbox_nullable_task_wakeup.sql  0004_scheduled_mail.sql  0005_mail_reactions.sql  0005_mail_read_state.sql  0006_persona_display_name.sql  0006_wakeup_context_metrics.sql  0007_outbox_channel_reaction_publish.sql  0008_decouple_worktree_from_git.sql  0009_drop_personas_table.sql
tests/: conftest.py  fake_adapter.py  helpers.py  test_adapter_factory.py  test_adapter_multimodal.py  test_agent_loop.py  test_agent_loop_cancel.py  test_agent_loop_dead_loop.py  test_agent_loop_fallback.py  test_agent_loop_interrupt.py  test_agent_loop_multi_turn.py  test_agent_loop_silent_close.py  test_auto_wake_on_mail.py  test_blob_store.py  test_blocker_watcher.py  test_bootstrap_customization.py  test_builtin_skills.py  test_channel_registry.py  test_chaos_kill_points.py  test_coding_backend_credentials.py  test_compact.py  test_dashboard_broadcaster.py  test_dashboard_live_cards.py  test_dashboard_markdown.py  test_dashboard_multimodal.py  test_dashboard_routes.py  test_dashboard_task_filter.py  test_dispatcher_worker_reuse_prompt.py  test_docs_smoke.py  test_dotenv_loading.py  test_entropy_regressions.py  test_ephemeral_reaper.py  test_fan_in_aggregation.py  test_fan_in_barrier.py  test_fanin_ttl_and_observability.py  test_fsutil.py  test_future_mail.py  test_git_context.py  test_health_tracker.py  test_identity.py  (+56 more)
(+123 files in other folders)
