[project]
name = "lyre"
version = "0.0.1"
description = "Long-running personal multi-agent team infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Somainer", email = "somainer@gmail.com" },
]

dependencies = [
  # LLM
  "anthropic>=0.39.0",
  # OpenAI-compatible providers (OpenAI proper, DeepSeek OpenAI-compat,
  # OpenRouter, Together, vLLM, …)
  "openai>=1.40.0",
  # MCP server / client
  "mcp>=1.0.0",
  # Persistence
  "aiosqlite>=0.20.0",
  # Data types
  "pydantic>=2.0",
  # CLI
  "click>=8.1",
  # Config
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  # Logging
  "structlog>=24.0",
  # Dashboard (Sprint D1)
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  # Render markdown in mail bodies / notes / thinking for the dashboard.
  # markdown-it-py is CommonMark-compliant and what claude.ai uses.
  "markdown-it-py>=3.0",
  # Future mail: cron-expression next-fire computation
  "croniter>=2.0",
  # External channel: Lark/Feishu bot integration. Official SDK supports
  # the Long Connection (WebSocket) event subscription mode used by the
  # LarkBotRunner — no public webhook URL required.
  "lark-oapi>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-pyyaml",
]

[project.scripts]
lyre = "lyre.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lyre"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = [
  "E501",     # line length handled by formatter
  "ASYNC240", # pathlib in async fns is fine for our cwd/dir manipulation
  "SIM102",   # nested if often clearer than chained `and`
  "SIM105",   # try/except/pass reads more obviously than contextlib.suppress in cleanup paths
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
